--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Homework 9 - JSON</title>
+	<title>Homework 10 - AJAX</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="main.css">
@@ -13,9 +13,13 @@
 <body>
 	<label>Employee Number</label>
 	<input id="employee-number" type="number" />
-	<button id="clock-in">Clock In</button>
+	<button id="clock-in" onclick="sendAJAX()">Clock In</button>
 	<button id="view-all">View All Employees</button>
+ 
+  <h2> Produce Stock </h2>
+  <div id="produceList">
 
+  </div>
 	<script type="text/javascript" src="script.js"></script>
 </body>
 
